--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,9 @@ dependencies {
 
     // koin
     implementation "io.insert-koin:koin-android:3.1.2"
+
+    // Navigation
+    def nav_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
