Added screen with news details
news details opens at popup now, added animation and other resources for popup window. Also set portrait orientation only. News cards now have default images.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.newsportal">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsPortal"
         android:name=".MyApplication">
-        <activity android:name=".app.main.MainActivity">
+        <activity android:name=".app.main.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
