--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,6 @@ dependencies {
 
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation "androidx.activity:activity-ktx:1.3.1"
-    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Room
     def room_version = "2.3.0"
@@ -78,4 +77,8 @@ dependencies {
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
